# Stipul

./: .gitignore  AGENTS.md  CHANGELOG.md  PROOF.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release-validate.yml  release.yml
agentshield/: __init__.py  breakglass.py  exceptions.py  exporter.py  models.py  permits.py  scanner.py
agentshield/budget/: __init__.py  decay.py  state.py  tracker.py
agentshield/cli/: __init__.py  diff_cmd.py  main.py  (+5 more)
demo/: README.md  demo-charter.yaml  run.py
docs/: CLI.md  SHIPPED_STATE.md  SUNDAY_DEMO_RUNBOOK.md  THREAT_MODEL.md  claude-code-quickstart.md
scripts/: validate_dist.sh
stipul/: __init__.py  __main__.py  exceptions.py  scanner.py
tests/: cli_support.py  conftest.py  test_breakglass.py  test_budget.py  test_bypass.py  test_chain_signed.py  test_charter_lint.py  test_charter_loader.py  test_circuit_breaker.py  test_cli_export.py  test_cli_gateway.py  test_cli_history.py  test_cli_lint_charter.py  test_cli_lint_contract.py  test_cli_operator.py  test_cli_packaging.py  test_cli_scan.py  test_cli_simulate_diff.py  test_cli_smoke.py  test_cli_verify.py  test_contract_lint.py  test_control_sidecar.py  test_decay.py  test_decisions.py  test_decisions_and_summary.py  test_delegation.py  test_demo_proof.py  test_dist_packaging.py  test_egress.py  test_events.py  test_export_includes_scan_report.py  test_exporter.py  test_gateway_signal_cleanup.py  test_guardrails.py  test_health.py  test_inheritance.py  test_init_cmd.py  test_integration_week4.py  test_mcp_gateway.py  test_merge.py  (+22 more)
(+172 files in other folders)
