[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentshield"
version = "0.1.0"
description = "Policy and contract utilities for agent safety."
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]
dev = [
    "pytest>=7",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
