[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stipul"
dynamic = ["version"]
description = "Policy and contract utilities for agent safety."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41",
]

[project.scripts]
stipul = "stipul.cli.main:main"

[project.optional-dependencies]
test = [
    "pytest>=7",
]
dev = [
    "build>=1",
    "wheel>=0.45",
    "twine>=5",
    "pytest>=7",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
]

[tool.setuptools.dynamic]
version = {attr = "stipul.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
